force-app/main/default/objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <label>Customer</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Customers Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>