force-app/main/default/objects/Customer__c/fields/Buyers_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Buyers Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>