force-app/main/default/objects/Customer__c/fields/Customer_Location__c.field-meta.xml
<CustomField>
    <fullName>Customer_Location__c</fullName>
    <description>Customer country of origin</description>
    <label>Customer Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
            <value>
                <fullName>Israel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>