force-app/main/default/objects/Customer__c/fields/Government_System__c.field-meta.xml
<CustomField>
    <fullName>Government_System__c</fullName>
    <label>Government System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Democracy</fullName>
            </value>
            <value>
                <fullName>Monarchy</fullName>
            </value>
            <value>
                <fullName>Dictatorship</fullName>
            </value>
            <value>
                <fullName>Anarchy</fullName>
            </value>
            <value>
                <fullName>Communist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>