force-app/main/default/objects/Customer__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar Panels</fullName>
            </value>
            <value>
                <fullName>Electric Cars</fullName>
            </value>
            <value>
                <fullName>Nuclear Fusion</fullName>
            </value>
            <value>
                <fullName>Weapons Manufacturing</fullName>
            </value>
            <value>
                <fullName>Medical Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>