force-app/main/default/objects/Customer__c/fields/State_Run_Company__c.field-meta.xml
<CustomField>
    <fullName>State_Run_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Run Company</label>
    <type>Checkbox</type>
</CustomField>